restricted ChildWindow in container. fixed bug with ChildWindow zindex, added a WindowState property to ChildWindow which will control opening and closing the window through data binding; two states WindowState.Open and WindowState.Closed.  Added OverlayBrush and Overlay Opacity properties allow users to modify the ChldWindow's OverLay element.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="BusyIndicator\BusyIndicator.cs" />
     <Compile Include="ChildWindow\ChildWindow.cs" />
+    <Compile Include="ChildWindow\WindowState.cs" />
     <Compile Include="MessageBox\MessageBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
