added new RichTextBox control.  Extends the Windows.Controls.RichTextbox to include a Text dependency property that supports data binding.  This control uses the concept of text formatters. TextFormatters allow the user to format the text in the RichTextBox into any format they wish.  Three text formatters are included: PlainTextFormatter, RtfFormatter, and a XamlFormatter.  User can create their own custom formatters by creating a class that inherits from ITextFormatter and setting that as the default formatter in the <RichTextBox.TextFormatter> block.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -89,6 +89,11 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="BusyIndicator\VisualStates.BusyIndicator.cs" />
+    <Compile Include="RichTextBox\Formatters\ITextFormatter.cs" />
+    <Compile Include="RichTextBox\Formatters\PlainTextFormatter.cs" />
+    <Compile Include="RichTextBox\Formatters\RtfFormatter.cs" />
+    <Compile Include="RichTextBox\Formatters\XamlFormatter.cs" />
+    <Compile Include="RichTextBox\RichTextBox.cs" />
     <Compile Include="VisualStates.cs" />
     <Compile Include="MessageBox\VisualStates.MessageBox.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
