--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -53,6 +53,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="RichTextBox\FormatToolbar\FormatToolbar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -82,6 +86,11 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="BusyIndicator\VisualStates.BusyIndicator.cs" />
+    <Compile Include="RichTextBox\FormatToolbar\FormatToolbarManager.cs" />
+    <Compile Include="RichTextBox\FormatToolbar\FormatToolbar.xaml.cs">
+      <DependentUpon>FormatToolbar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RichTextBox\FormatToolbar\UIElementAdorner.cs" />
     <Compile Include="RichTextBox\Formatters\ITextFormatter.cs" />
     <Compile Include="RichTextBox\Formatters\PlainTextFormatter.cs" />
     <Compile Include="RichTextBox\Formatters\RtfFormatter.cs" />
@@ -104,6 +113,15 @@
     <Resource Include="MessageBox\Icons\Information48.png" />
     <Resource Include="MessageBox\Icons\Question48.png" />
     <Resource Include="MessageBox\Icons\Warning48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="RichTextBox\FormatToolbar\Images\Bold16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\CenterAlign16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\Italic16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\JustifyAlign16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\LeftAlign16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\RightAlign16.png" />
+    <Resource Include="RichTextBox\FormatToolbar\Images\Underline16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
