initial checkin of new ButtonSpinner control.  Allows you to add button spinners to any element and then respond to the Spin event to manipulate that element.  To add use the following syntax
<toolkit:ButtonSpinner Spin="ButtonSpinner_Spin" >
            <TextBox x:Name="_txtValue" />
</toolkit:ButtonSpinner>

     private void ButtonSpinner_Spin(object sender, Microsoft.Windows.Controls.Primitives.SpinEventArgs e)
{
            int value = String.IsNullOrEmpty(_txtValue.Text) ? 0 : Convert.ToInt32(_txtValue.Text);
            if (e.Direction == Microsoft.Windows.Controls.Primitives.SpinDirection.Increase)
                value++;
            else
                value--;
            _txtValue.Text = value.ToString();
}

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusyIndicator\BusyIndicator.cs" />
+    <Compile Include="ButtonSpinner\ButtonSpinner.cs" />
     <Compile Include="ChildWindow\ChildWindow.cs" />
     <Compile Include="ChildWindow\VisualStates.ChildWindow.cs" />
     <Compile Include="ChildWindow\WindowState.cs" />
@@ -71,6 +72,10 @@
     <Compile Include="ColorPicker\HsvColor.cs" />
     <Compile Include="ColorPicker\ColorUtilities.cs" />
     <Compile Include="ColorPicker\ColorSpectrumSlider.cs" />
+    <Compile Include="Core\Primitives\SpinDirection.cs" />
+    <Compile Include="Core\Primitives\SpinEventArgs.cs" />
+    <Compile Include="Core\Primitives\Spinner.cs" />
+    <Compile Include="Core\Primitives\ValidSpinDirections.cs" />
     <Compile Include="MessageBox\MessageBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
