added new Magnifier control.  It magnifies  anything that it is attached to.  You can attach it to any thing that is of type UIElement.  To attach it use the MagnifierManager as follows.  The ZoomFactor controls how far to zoom in.  ZoomFactor ranges from 0.0 up to 1.0.  The lower the number the deeper the zoom.  0 being the most zoomed in and 1 being normal size.  It is a double so play around with values such as .009 or .2386  to get the desired effect.
<extToolkit:MagnifierManager.Magnifier>
            <extToolkit:Magnifier Radius="150" ZoomFactor="0.5" />
</extToolkit:MagnifierManager.Magnifier>

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -76,6 +76,11 @@
     <Compile Include="ButtonSpinner\SpinEventArgs.cs" />
     <Compile Include="ButtonSpinner\Spinner.cs" />
     <Compile Include="ButtonSpinner\ValidSpinDirections.cs" />
+    <Compile Include="Magnifier\Converters\BorderThicknessToStrokeThicknessConverter.cs" />
+    <Compile Include="Magnifier\Converters\RadiusConverter.cs" />
+    <Compile Include="Magnifier\Magnifier.cs" />
+    <Compile Include="Magnifier\MagnifierAdorner.cs" />
+    <Compile Include="Magnifier\MagnifierManager.cs" />
     <Compile Include="MessageBox\MessageBox.cs" />
     <Compile Include="NumericUpDown\NumericUpDown.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
