Made a lot of changes, and possible breaking changes: 1. added new MaskedTextBox control 2. no longer have UpDownBase<T> 3. NumericUpDown now has new base class.  Hopefully I didn't break anything, but I know I did :0) 4. By default the NumericUpDown uses doubles.  To use anything else such as decimals or int you must specify the ValueType accordingly. <extToolkit:NumericUpDown Grid.Row="1" Value="{Binding Age}" Increment="1" Minimum="18" Maximum="65" ValueType="{x:Type sys:Int32}" />

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Magnifier\Magnifier.cs" />
     <Compile Include="Magnifier\MagnifierAdorner.cs" />
     <Compile Include="Magnifier\MagnifierManager.cs" />
+    <Compile Include="Core\Primitives\InputBase.cs" />
+    <Compile Include="MaskedTextBox\MaskedTextBox.cs" />
     <Compile Include="MessageBox\MessageBox.cs" />
     <Compile Include="NumericUpDown\NumericUpDown.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -108,7 +110,7 @@
     <Compile Include="RichTextBox\Formatters\RtfFormatter.cs" />
     <Compile Include="RichTextBox\Formatters\XamlFormatter.cs" />
     <Compile Include="RichTextBox\RichTextBox.cs" />
-    <Compile Include="UpDownBase\UpDownBase.cs" />
+    <Compile Include="Core\Primitives\UpDownBase.cs" />
     <Compile Include="VisualStates.cs" />
     <Compile Include="MessageBox\VisualStates.MessageBox.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -149,7 +151,7 @@
     <Resource Include="RichTextBoxFormatBar\Images\Underline16.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Core\Primitives\" />
+    <Folder Include="UpDownBase\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
