added new DateTimeUpDown control.  Aloows you to use spin buttons or the mouse wheel to increment/decrement individual sections of a DateTime value.  There are currently 10 supported formats: FullDateTime, LongDate, LongTime, MonthDay, RFC1123, ShortDate, ShortTime, SortableDateTime, UniversalSortableDateTime, and YearMonth.  Use the control as follows:
<extToolkit:DateTimeUpDown Value="{Binding LastUpdated}" Format="FullDateTime" />

You cannot type in the Value yet because I haven't figured that part out yet.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -77,6 +77,10 @@
     <Compile Include="ButtonSpinner\Spinner.cs" />
     <Compile Include="ButtonSpinner\ValidSpinDirections.cs" />
     <Compile Include="Core\Converters\InverseBoolConverter.cs" />
+    <Compile Include="DateTimeUpDown\DateTimeFormat.cs" />
+    <Compile Include="DateTimeUpDown\DateTimeInfo.cs" />
+    <Compile Include="DateTimeUpDown\DateTimePart.cs" />
+    <Compile Include="DateTimeUpDown\DateTimeUpDown.cs" />
     <Compile Include="Magnifier\Converters\BorderThicknessToStrokeThicknessConverter.cs" />
     <Compile Include="Magnifier\Converters\RadiusConverter.cs" />
     <Compile Include="Magnifier\Magnifier.cs" />
