--- a/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -25,7 +25,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;VS2008</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -46,38 +46,153 @@
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
+    <Reference Include="UIAutomationProvider">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WindowsBase">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="PresentationCore">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="PresentationFramework">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="RichTextBoxFormatBar\RichTextBoxFormatBar.xaml">
+    <Page Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBoxFormatBar\RichTextBoxFormatBar.xaml">
+      <Link>RichTextBoxFormatBar\RichTextBoxFormatBar.xaml</Link>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusyIndicator\BusyIndicator.cs" />
-    <Compile Include="ButtonSpinner\ButtonSpinner.cs" />
-    <Compile Include="ButtonSpinner\SpinDirection.cs" />
-    <Compile Include="ButtonSpinner\SpinEventArgs.cs" />
-    <Compile Include="ButtonSpinner\Spinner.cs" />
-    <Compile Include="ButtonSpinner\ValidSpinDirections.cs" />
-    <Compile Include="ChildWindow\ChildWindow.cs" />
-    <Compile Include="ChildWindow\VisualStates.ChildWindow.cs" />
-    <Compile Include="ChildWindow\WindowState.cs" />
-    <Compile Include="ColorPicker\ColorPicker.cs" />
-    <Compile Include="ColorPicker\HsvColor.cs" />
-    <Compile Include="ColorPicker\ColorUtilities.cs" />
-    <Compile Include="ColorPicker\ColorSpectrumSlider.cs" />
-    <Compile Include="Core\UIElementAdorner.cs" />
-    <Compile Include="MessageBox\MessageBox.cs" />
-    <Compile Include="NumericUpDown\NumericUpDown.cs" />
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\BusyIndicator\BusyIndicator.cs">
+      <Link>BusyIndicator\BusyIndicator.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\BusyIndicator\VisualStates.BusyIndicator.cs">
+      <Link>BusyIndicator\VisualStates.BusyIndicator.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ButtonSpinner\ButtonSpinner.cs">
+      <Link>ButtonSpinner\ButtonSpinner.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ButtonSpinner\SpinDirection.cs">
+      <Link>ButtonSpinner\SpinDirection.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ButtonSpinner\SpinEventArgs.cs">
+      <Link>ButtonSpinner\SpinEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ButtonSpinner\Spinner.cs">
+      <Link>ButtonSpinner\Spinner.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ButtonSpinner\ValidSpinDirections.cs">
+      <Link>ButtonSpinner\ValidSpinDirections.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ChildWindow\ChildWindow.cs">
+      <Link>ChildWindow\ChildWindow.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ChildWindow\VisualStates.ChildWindow.cs">
+      <Link>ChildWindow\VisualStates.ChildWindow.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ChildWindow\WindowState.cs">
+      <Link>ChildWindow\WindowState.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ColorPicker\ColorPicker.cs">
+      <Link>ColorPicker\ColorPicker.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ColorPicker\ColorSpectrumSlider.cs">
+      <Link>ColorPicker\ColorSpectrumSlider.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ColorPicker\ColorUtilities.cs">
+      <Link>ColorPicker\ColorUtilities.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\ColorPicker\HsvColor.cs">
+      <Link>ColorPicker\HsvColor.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Core\Converters\InverseBoolConverter.cs">
+      <Link>Core\Converters\InverseBoolConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Core\Primitives\InputBase.cs">
+      <Link>Core\Primitives\InputBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Core\UIElementAdorner.cs">
+      <Link>Core\UIElementAdorner.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\DateTimeUpDown\DateTimeFormat.cs">
+      <Link>DateTimeUpDown\DateTimeFormat.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\DateTimeUpDown\DateTimeInfo.cs">
+      <Link>DateTimeUpDown\DateTimeInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\DateTimeUpDown\DateTimePart.cs">
+      <Link>DateTimeUpDown\DateTimePart.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\DateTimeUpDown\DateTimeUpDown.cs">
+      <Link>DateTimeUpDown\DateTimeUpDown.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Magnifier\Converters\BorderThicknessToStrokeThicknessConverter.cs">
+      <Link>Magnifier\Converters\BorderThicknessToStrokeThicknessConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Magnifier\Converters\RadiusConverter.cs">
+      <Link>Magnifier\Converters\RadiusConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Magnifier\Magnifier.cs">
+      <Link>Magnifier\Magnifier.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Magnifier\MagnifierAdorner.cs">
+      <Link>Magnifier\MagnifierAdorner.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\Magnifier\MagnifierManager.cs">
+      <Link>Magnifier\MagnifierManager.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\MaskedTextBox\MaskedTextBox.cs">
+      <Link>MaskedTextBox\MaskedTextBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\MessageBox\MessageBox.cs">
+      <Link>MessageBox\MessageBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\MessageBox\VisualStates.MessageBox.cs">
+      <Link>MessageBox\VisualStates.MessageBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\NumericUpDown\NumericUpDown.cs">
+      <Link>NumericUpDown\NumericUpDown.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBoxFormatBar\IRichTextBoxFormatBar.cs">
+      <Link>RichTextBoxFormatBar\IRichTextBoxFormatBar.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBoxFormatBar\RichTextBoxFormatBar.xaml.cs">
+      <Link>RichTextBoxFormatBar\RichTextBoxFormatBar.xaml.cs</Link>
+      <DependentUpon>RichTextBoxFormatBar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBoxFormatBar\RichTextBoxFormatBarManager.cs">
+      <Link>RichTextBoxFormatBar\RichTextBoxFormatBarManager.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBox\Formatters\ITextFormatter.cs">
+      <Link>RichTextBox\Formatters\ITextFormatter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBox\Formatters\PlainTextFormatter.cs">
+      <Link>RichTextBox\Formatters\PlainTextFormatter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBox\Formatters\RtfFormatter.cs">
+      <Link>RichTextBox\Formatters\RtfFormatter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBox\Formatters\XamlFormatter.cs">
+      <Link>RichTextBox\Formatters\XamlFormatter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\RichTextBox\RichTextBox.cs">
+      <Link>RichTextBox\RichTextBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\UpDownBase\UpDownBase.cs">
+      <Link>UpDownBase\UpDownBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\VisualStates.cs">
+      <Link>VisualStates.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -91,20 +206,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="BusyIndicator\VisualStates.BusyIndicator.cs" />
-    <Compile Include="RichTextBoxFormatBar\IRichTextBoxFormatBar.cs" />
-    <Compile Include="RichTextBoxFormatBar\RichTextBoxFormatBar.xaml.cs">
-      <DependentUpon>RichTextBoxFormatBar.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="RichTextBoxFormatBar\RichTextBoxFormatBarManager.cs" />
-    <Compile Include="RichTextBox\Formatters\ITextFormatter.cs" />
-    <Compile Include="RichTextBox\Formatters\PlainTextFormatter.cs" />
-    <Compile Include="RichTextBox\Formatters\RtfFormatter.cs" />
-    <Compile Include="RichTextBox\Formatters\XamlFormatter.cs" />
-    <Compile Include="RichTextBox\RichTextBox.cs" />
-    <Compile Include="UpDownBase\UpDownBase.cs" />
-    <Compile Include="VisualStates.cs" />
-    <Compile Include="MessageBox\VisualStates.MessageBox.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -129,9 +230,6 @@
     <Resource Include="RichTextBoxFormatBar\Images\LeftAlign16.png" />
     <Resource Include="RichTextBoxFormatBar\Images\RightAlign16.png" />
     <Resource Include="RichTextBoxFormatBar\Images\Underline16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Core\Primitives\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
