--- a/Main/Source/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/Main/Source/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -225,6 +225,12 @@
     <Resource Include="RichTextBoxFormatBar\Images\RightAlign16.png" />
     <Resource Include="RichTextBoxFormatBar\Images\Underline16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="RichTextBoxFormatBar\Images\Bullets16.png" />
+    <Resource Include="RichTextBoxFormatBar\Images\FontColorPicker16.png" />
+    <Resource Include="RichTextBoxFormatBar\Images\Numbering16.png" />
+    <Resource Include="RichTextBoxFormatBar\Images\TextHighlightColorPicker16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
