ColorPicker: fixed bug where the popup would stay open when other controls receive focus. Restyled the colorPicker. RichTextBoxFormatBar: fixed font highlight toogle button to display the current highlight color

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ButtonSpinner\ValidSpinDirections.cs" />
     <Compile Include="ColorPicker\ColorItem.cs" />
     <Compile Include="ColorPicker\ColorPicker.cs" />
+    <Compile Include="ColorPicker\ColorUtilities.cs" />
     <Compile Include="Core\Converters\InverseBoolConverter.cs" />
     <Compile Include="DateTimeUpDown\DateTimeFormat.cs" />
     <Compile Include="DateTimeUpDown\DateTimeInfo.cs" />
