--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ColorPicker\ColorItem.cs" />
     <Compile Include="ColorPicker\ColorPicker.cs" />
     <Compile Include="ColorPicker\ColorUtilities.cs" />
+    <Compile Include="Core\Converters\ColorToSolidColorBrushConverter.cs" />
     <Compile Include="Core\Converters\InverseBoolConverter.cs" />
     <Compile Include="DateTimeUpDown\DateTimeFormat.cs" />
     <Compile Include="DateTimeUpDown\DateTimeInfo.cs" />
