ChildWIndow: fixed bug which was cause by showing the window then resizing the parent, the window would not recalculate its position to stay in view.  I refactored the code.  I also added a new property called WindowStartupLocation.  There are two options; Center and Manual.  Set it to Center if you want the ChildWindow to always be centered when it opens.  Set it to Manual if you want to control where it opens by setting the Top and Left properties.  If set on Manual and the user drags the ChildWindow and closes it, it will reopen the last place the user moved it.  The default value is Manual.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ButtonSpinner\ButtonSpinner.cs" />
     <Compile Include="ChildWindow\ChildWindow.cs" />
     <Compile Include="ChildWindow\VisualStates.ChildWindow.cs" />
+    <Compile Include="ChildWindow\WindowStartupLocation.cs" />
     <Compile Include="ChildWindow\WindowState.cs" />
     <Compile Include="ButtonSpinner\SpinDirection.cs" />
     <Compile Include="ButtonSpinner\SpinEventArgs.cs" />
